# backtest-simulation

./: .coverage  .dockerignore  .env.example  .gitignore  AGNETS.md  CLAUDE.md  Dockerfile  LICENSE  PRD.txt  README.md  README_ko.md  config.yaml  docker-compose.example.yml  docker-compose.prod.yml  docker-compose.yml  kis_devlp.yaml  prd.txt  price_cache.py  pyproject.toml  pytest.ini  requirements-docker.txt  requirements-server.txt  requirements.txt  test_spy_price.py  yaml.pyi
.claude/agents/: api-designer.md  microservices-architect.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: backend-ci-cd.yml  ci.yml  deploy.yml  frontend-ci.yml
.taskmaster/: state.json
.taskmaster/tasks/: tasks.json
app/: main.py
app/api/: __init__.py
app/core/: __init__.py  config.py  container.py
app/dashboard/: __init__.py  app.py  callbacks.py  constants.py  layout.py
app/models/: __init__.py  backtest.py
app/prompts/: backtest_system.txt
app/services/: __init__.py  code_generator.py  code_validator.py  csv_exporter.py  result_formatter.py
app/utils/: ticker_extraction.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  __init__.py  config.yaml  main.py  requirements.txt
backend/core/: config.py  container.py
backend/docker-runner/: Dockerfile
backend/models/: __init__.py  backtest.py  (+3 more)
docs/: DEPLOYMENT.md  backend.md
frontend/: .dockerignore  .env.local.example  .gitignore  Dockerfile  __init__.py  app.py  callbacks.py  layout.py  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
nginx/: custom.conf
scripts/: deploy-prod.sh
tests/: conftest.py  test_backtest_models.py  test_config.py  test_container.py  test_health.py
(+243 files in other folders)
