[project]
name = "kis-github"
version = "1.0.0"
description = "korea investment open api sample codes with AI-powered backtesting service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.1",
    "pycryptodome>=3.23.0",
    "pyqt6>=6.9.1",
    "pyside6>=6.9.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "websockets>=15.0.1",
    # Backend service dependencies
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.6.0",
    # LLM provider dependencies
    "openai>=1.40.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    # Dashboard dependencies
    "dash>=2.18.0",
    "dash-bootstrap-components>=1.6.0",
    "plotly>=5.24.0",
    # Database dependencies
    "supabase>=2.0.0",
    # Market calendar for trading day detection (supports 1950+, 203 exchanges)
    "pandas_market_calendars>=4.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "examples_llm*", "examples_user*"]
exclude = ["tests*"]
